# codex-jarvis

./: .gitignore  .npmrc  LICENSE  README.md  STAGES.md  SYSTEM_DESIGN_codex_system_console.md  WIREFRAME_codex_system_console.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/api/: codex.ts  tasks.ts  terminal.ts
src/components/history/: HistoryView.tsx
src/components/review/: ReviewView.tsx
src/components/settings/: SettingsView.tsx
src/components/setup/: SetupWizard.tsx
src/components/task-runner/: TaskRunner.tsx  VirtualLog.tsx
src/components/terminal/: TerminalView.tsx
src/data/: profiles.ts
src/types/: codex.ts  profile.ts  task.ts  terminal.ts  workspace.ts
