[package]
name = "codex-jarvis"
version = "0.1.0"
description = "A Linux desktop control panel for Codex CLI."
authors = ["autyan"]
edition = "2021"
license = "MIT"

[lib]
name = "codex_jarvis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

